@@ -12,6 +12,109 @@ rb-open-selected=Open selected object in Recipe Book
 rb-return-to-home=Return to home
 rb-search=Search Recipe Book
 
+[entity-type]
+accumulator=Accumulator
+ammo-turret=Ammo turret
+arithmetic-combinator=Arithmetic combinator
+arrow=Arrow
+artillery-flare=Artillery flare
+artillery-projectile=Artillery projectile
+artillery-turret=Artillery turret
+artillery-wagon=Artillery wagon
+assembling-machine=Assembling machine
+beacon=Beacon
+beam=Beam
+boiler=Boiler
+burner-generator=Burner generator
+car=Car
+cargo-wagon=Cargo wagon
+character=Character
+character-corpse=Character corpse
+cliff=Cliff
+combat-robot=Combat robot
+constant-combinator=Constant combinator
+construction-robot=Construction robot
+container=Container
+corpse=Corpse
+curved-rail=Curved rail
+decider-combinator=Decider combinator
+deconstructible-tile-proxy=Deconstructible tile proxy
+electric-energy-interface=Electric energy interface
+electric-pole=Electric pole
+electric-turret=Electric turret
+entity-ghost=Entity ghost
+explosion=Explosion
+fire=Fire
+fish=Fish
+flame-thrower-explosion=Flame thrower explosion
+fluid-turret=Fluid turret
+fluid-wagon=Fluid wagon
+flying-text=Flying text
+furnace=Furnace
+gate=Gate
+generator=Generator
+heat-interface=Heat interface
+heat-pipe=Heat pipe
+highlight-box=Highlight box
+infinity-container=Infinity container
+infinity-pipe=Infinity pipe
+inserter=Inserter
+item-entity=Item entity
+item-request-proxy=Item request proxy
+lab=Lab
+lamp=Lamp
+land-mine=Land mine
+linked-belt=Linked belt
+linked-container=Linked container
+loader=Loader
+loader-1x1=Loader (1x1)
+locomotive=Locomotive
+logistic-container=Logistic container
+logistic-robot=Logistic robot
+market=Market
+mining-drill=Mining drill
+offshore-pump=Offshore pump
+particle-source=Particle source
+pipe=Pipe
+pipe-to-ground=Pipe to ground
+player-port=Player port
+power-switch=Power switch
+programmable-speaker=Programmable speaker
+projectile=Projectile
+pump=Pump
+radar=Radar
+rail-chain-signal=Rail chain signal
+rail-remnants=Rail remnants
+rail-signal=Rail signal
+reactor=Reactor
+resource=Resource
+roboport=Roboport
+rocket-silo=Rocket silo
+rocket-silo-rocket=Rocket silo rocket
+rocket-silo-rocket-shadow=Rocket silo rocket shadow
+simple-entity=Simple entity
+simple-entity-with-force=Simple entity with force
+simple-entity-with-owner=Simple entity with owner
+smoke-with-trigger=Smoke with trigger
+solar-panel=Solar panel
+speech-bubble=Speech bubble
+spider-leg=Spider leg
+spider-vehicle=Spider vehicle
+splitter=Splitter
+sticker=Sticker
+storage-tank=Storage tank
+straight-rail=Straight rail
+stream=Stream
+tile-ghost=Tile ghost
+train-stop=Train stop
+transport-belt=Transport belt
+tree=Tree
+turret=Turret
+underground-belt=Underground belt
+unit=Unit
+unit-spawner=Unit spawner
+wall=Wall
+
 [shortcut-name]
 rb-search=Search Recipe Book
 
@@ -229,6 +332,7 @@ rb-time-per-unit-desc=How long it takes to research one unit in a lab with a res
 rb-time-per-unit=Time per unit
 rb-toggle-completed=Toggle completed
 rb-tooltips=Tooltips
+rb-type=Type
 rb-unlocked-by=Unlocked by
 rb-unlocks-entities=Unlocks entities
 rb-unlocks-equipment=Unlocks equipment
