@@ -23,6 +23,7 @@ return function(database, dictionaries, metadata)
       recipe_categories_lookup = prototype.crafting_categories,
       recipe_categories = util.convert_categories(prototype.crafting_categories, "recipe_category"),
       science_packs = {},
+      type = { "entity-type." .. prototype.type },
       unlocked_by = {},
     }
     dictionaries.entity:add(name, prototype.localised_name)
@@ -90,6 +91,7 @@ return function(database, dictionaries, metadata)
       rocket_parts_required = prototype.rocket_parts_required,
       science_packs = {},
       size = util.get_size(prototype),
+      type = { "entity-type." .. prototype.type },
       unlocked_by = {},
     }
     dictionaries.entity:add(name, prototype.localised_name)
