@@ -24,6 +24,7 @@ function mining_drill_proc.build(database, dictionaries)
       science_packs = {},
       size = util.get_size(prototype),
       supports_fluid = #prototype.fluidbox_prototypes > 0,
+      type = { "entity-type." .. prototype.type },
       unlocked_by = {},
     }
     dictionaries.entity:add(name, prototype.localised_name)
